# Poll-Website

./: README.md  pyproject.toml
pollsite/polls/: admin.py  models.py  tests.py  urls.py  views.py
pollsite/polls/migrations/: 0001_initial.py
pollsite/polls/static/polls/: style.css
pollsite/polls/templates/polls/: detail.html  index.html
pollsite/pollsite/: settings.py  urls.py
